29Items-Projects/11DevOps/2-Python-ML-Service-CICD/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fraud-detection
  labels:
    app.kubernetes.io/name: fraud-detection
    app.kubernetes.io/part-of: fraud-detection-api
